[package]
name = "arg-shim"
version = "0.6.4"
authors = ["foyou"]
description = "A flexible CLI argument shim and transformer for Windows"
repository = "https://github.com/foyoux/arg-shim"
edition = "2024"

[dependencies]
arboard = "3.6.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10+spec-1.1.0"
regex = "1.10"

[build-dependencies]
winres = "0.1"